@@ -1,3 +1,7 @@
+2013-09-06  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Added TokenCounter frontend class
+
 2013-08-30  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * JastAddJ no longer generates JSR/RET bytecode instructions - finally
